Made optimization for loading speed on web UI + wip on tooltips

--- a/public/index.css
+++ b/public/index.css
@@ -33,3 +33,18 @@ p, figure {
 a img {
     border: none;
 }
+
+a.back-to-top {
+    display: none;
+    width: 60px;
+    height: 60px;
+    text-indent: -9999px;
+    position: fixed;
+    z-index: 999;
+    right: 20px;
+    bottom: 20px;
+    background: #27AE61 url("up-arrow.png") no-repeat center 43%;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+}
